--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -16,18 +16,18 @@
   chcontrib = {secondauthor},
 }
 
-@misc{luck-popl2016-submission,
+@misc{beginners-luck,
   author = {Leonidas Lampropoulos and
-            Benjamin C. Pierce and
+            Diane Gallois-Wong and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             John Hughes and
-            Zoe Paraskevopoulou and
+            Benjamin C. Pierce and
             {Li-yao} Xia},
-  title = {Making Our Own {Luck}: A Language For Random Generators},
-  url = {https://www.cis.upenn.edu/~llamp/pdf/Luck.pdf},
-  year = {2015},
+  title = {Beginner's Luck: A Language for Random Generators},
+  url = {https://arxiv.org/abs/1607.05443},
+  year = {2016},
   month = jul,
-  howpublished = {Unpublished Draft},
+  howpublished = {Draft, arXiv:1607.05443},
   chcontrib = {minor},
 }
 
