--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,20 @@
 %% Drafts
 
+@misc{dm4f,
+  author = {Danel Ahman and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Guido Mart\'inez and
+            Gordon Plotkin and
+            Jonathan Protzenko and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Dijkstra Monads for Free},
+  howpublished = {Draft},
+  year = {2016},
+  month = jul,
+  chcontrib = {minor},
+}
+
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -23,24 +38,12 @@
             John Hughes and
             Benjamin C. Pierce and
             {Li-yao} Xia},
-  title = {Beginner's Luck: A Language for Random Generators},
+  title = {Beginner's {Luck}: A Language for Random Generators},
   url = {https://arxiv.org/abs/1607.05443},
   year = {2016},
   month = jul,
   howpublished = {Draft, arXiv:1607.05443},
   chcontrib = {minor},
-}
-
-@misc{arthur-alpha-draft,
-  author = {Arthur {Azevedo de Amorim} and
-            Benjamin C. Pierce and
-            C\u{a}t\u{a}lin Hri\c{t}cu},
-  title = {Alpha is for Address! {The} Essence of Memory Safety},
-  howpublished = {Draft},
-  month = jul,
-  year = {2015},
-  url = {https://www.cis.upenn.edu/~aarthur/alpha-draft.pdf},
-  chcontrib = {minor}
 }
 
 @misc{proportional_micro2015,
