--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -12,6 +12,7 @@
   howpublished = {Draft},
   year = {2016},
   month = jul,
+  url = {https://www.fstar-lang.org/papers/dm4free/},
   chcontrib = {minor},
 }
 
