--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,6 +1,6 @@
 %% Drafts
 
-@misc{dm4f,
+@misc{dm4free,
   author = {Danel Ahman and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Guido Mart\'inez and
@@ -215,8 +215,9 @@
   url = {http://arxiv.org/abs/1602.04503},
   acceptance = {31/87=0.36},
   key = {Conference Papers},
+  pages     = {45--60},
+  doi       = {10.1109/CSF.2016.11},
   chcontrib = {secondauthor},
-  note = {To appear, arXiv:1602.04503},
 }
 
 @inproceedings{fstar-popl2016,
