--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,21 +1,5 @@
 %% Drafts
 
-@misc{dm4free,
-  author = {Danel Ahman and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Guido Mart\'inez and
-            Gordon Plotkin and
-            Jonathan Protzenko and
-            Aseem Rastogi and
-            Nikhil Swamy},
-  title = {Dijkstra Monads for Free},
-  howpublished = {Draft},
-  year = {2016},
-  month = jul,
-  url = {https://www.fstar-lang.org/papers/dm4free/},
-  chcontrib = {minor},
-}
-
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -30,21 +14,6 @@
   year = {2015},
   month = oct,
   chcontrib = {secondauthor},
-}
-
-@misc{beginners-luck,
-  author = {Leonidas Lampropoulos and
-            Diane Gallois-Wong and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            John Hughes and
-            Benjamin C. Pierce and
-            {Li-yao} Xia},
-  title = {Beginner's {Luck}: A Language for Random Generators},
-  url = {https://arxiv.org/abs/1607.05443},
-  year = {2016},
-  month = jul,
-  howpublished = {Draft, arXiv:1607.05443},
-  chcontrib = {minor},
 }
 
 @misc{proportional_micro2015,
@@ -198,6 +167,44 @@
 }
 
 %% Conference Papers
+
+@inproceedings{dm4free,
+  author = {Danel Ahman and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Guido Mart\'inez and
+            Gordon Plotkin and
+            Jonathan Protzenko and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Dijkstra Monads for Free},
+  booktitle = {44th ACM SIGPLAN Symposium on Principles of Programming
+               Languages (POPL)},
+  shortbooktitle = {POPL},
+  year = {2016},
+  month = jul,
+  url = {https://www.fstar-lang.org/papers/dm4free/},
+  note = {To appear},
+  acceptance = {64/279=0.23},
+  chcontrib = {minor},
+}
+
+@inproceedings{beginners-luck,
+  author = {Leonidas Lampropoulos and
+            Diane Gallois-Wong and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            John Hughes and
+            Benjamin C. Pierce and
+            {Li-yao} Xia},
+  title = {Beginner's {Luck}: A Language for Random Generators},
+  booktitle = {44th ACM SIGPLAN Symposium on Principles of Programming
+               Languages (POPL)},
+  year = {2016},
+  month = jul,
+  url = {https://arxiv.org/abs/1607.05443},
+  note = {To appear},
+  acceptance = {64/279=0.23},
+  chcontrib = {minor},
+}
 
 @inproceedings{beyond-good-and-evil,
   author = {Yannis Juglaret and
