--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -16,19 +16,6 @@
   chcontrib = {secondauthor},
 }
 
-@misc{proportional_micro2015,
-  title = {Pay-for-what-you-need: Energy Proportional Adaptive
-           Metadata Architecture for Safety and Security},
-  author = {Nick Roessler and
-            Udit Dhawn and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Andr\'{e} DeHon},
-  howpublished = {Draft},
-  month = nov,
-  year = {2015},
-  chcontrib = {minor}
-}
-
 % Rejected
 @misc{pump_ccs2014,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -158,9 +145,9 @@
             Vilhelm Sj\"oberg and
             Brent Yorgey},
   title = {Software Foundations},
-  month = jan,
+  month = may,
   year = {2016},
-  publisher = {Electronic textbook, Version 4.0 beta},
+  publisher = {Electronic textbook, Version 4.0},
   url = {https://www.cis.upenn.edu/~bcpierce/sf/sf-4.0/index.html},
   key = {Books},
   chcontrib = {minor},
@@ -171,6 +158,7 @@
 @inproceedings{dm4free,
   author = {Danel Ahman and
             C\u{a}t\u{a}lin Hri\c{t}cu and
+            Kenji Maillard and
             Guido Mart\'inez and
             Gordon Plotkin and
             Jonathan Protzenko and
@@ -180,8 +168,8 @@
   booktitle = {44th ACM SIGPLAN Symposium on Principles of Programming
                Languages (POPL)},
   shortbooktitle = {POPL},
-  year = {2016},
-  month = jul,
+  year = {2017},
+  month = jan,
   url = {https://www.fstar-lang.org/papers/dm4free/},
   note = {To appear},
   acceptance = {64/279=0.23},
@@ -198,8 +186,8 @@
   title = {Beginner's {Luck}: A Language for Random Generators},
   booktitle = {44th ACM SIGPLAN Symposium on Principles of Programming
                Languages (POPL)},
-  year = {2016},
-  month = jul,
+  year = {2017},
+  month = jan,
   url = {https://arxiv.org/abs/1607.05443},
   note = {To appear},
   acceptance = {64/279=0.23},
