--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -33,7 +33,7 @@
 
 %% Journal Papers
 
-@misc{jcssubmission2015,
+@article{jcssubmission2015,
   title = {A Verified Information-Flow Architecture},
   author = {
     Arthur {Azevedo de Amorim} and
@@ -46,11 +46,13 @@
     Randy Pollack and
     Andrew Tolmach
   },
-  howpublished = {arXiv:1509.06503; Accepted in Special Issue of the Journal of
-                  Computer Security (JCS) on Verified Information Flow Security.
-                  To appear},
-  year = {2015},
-  month = sep,
+  journal = {Journal of Computer Security (JCS);
+             Special Issue on Verified Information Flow Security},
+  volume = {Preprint},
+  number = {Preprint},
+  pages = {1--46},
+  year = {2016},
+  ee = {http://content.iospress.com/articles/journal-of-computer-security/jcs15784},
   url = {http://arxiv.org/abs/1509.06503},
   chcontrib = {equalall},
 }
