--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -48,10 +48,11 @@
   },
   journal = {Journal of Computer Security (JCS);
              Special Issue on Verified Information Flow Security},
-  volume = {Preprint},
-  number = {Preprint},
-  pages = {1--46},
+  volume = {24},
+  number = {6},
+  pages = {689--734},
   year = {2016},
+  month = dec,
   ee = {http://content.iospress.com/articles/journal-of-computer-security/jcs15784},
   url = {http://arxiv.org/abs/1509.06503},
   chcontrib = {equalall},
@@ -74,7 +75,6 @@
   month = apr,
   issn = {1469-7653},
   pages = {e4 (62 pages)},
-  note = {Technical Report available as arXiv:1409.0393},
   doi = {http://dx.doi.org/10.1017/S0956796816000058},
   ee = {http://journals.cambridge.org/article_S0956796816000058},
   url = {http://arxiv.org/abs/1409.0393},
