--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -173,7 +173,8 @@
   year = {2017},
   month = jan,
   url = {https://www.fstar-lang.org/papers/dm4free/},
-  note = {To appear},
+  pages = {515-529},
+  publisher = {ACM},
   acceptance = {64/279=0.23},
   chcontrib = {minor},
 }
@@ -188,10 +189,12 @@
   title = {Beginner's {Luck}: A Language for Random Generators},
   booktitle = {44th ACM SIGPLAN Symposium on Principles of Programming
                Languages (POPL)},
+  shortbooktitle = {POPL},
   year = {2017},
   month = jan,
   url = {https://arxiv.org/abs/1607.05443},
-  note = {To appear},
+  pages = {114-129},
+  publisher = {ACM},
   acceptance = {64/279=0.23},
   chcontrib = {minor},
 }
