--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -33,7 +33,7 @@
 
 %% Journal Papers
 
-@article{jcssubmission2015,
+@article{ver_ifc_jcs,
   title = {A Verified Information-Flow Architecture},
   author = {
     Arthur {Azevedo de Amorim} and
