--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,43 @@
 %% Drafts
 
+@misc{relational,
+  author = {Niklas Grimm and
+            Kenji Maillard and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Matteo Maffei and
+            Jonathan Protzenko and
+            Aseem Rastogi and
+            Nikhil Swamy and
+            Santiago Zanella-B\'eguelin},
+  title = {A Monadic Framework for Relational Verification (Functional Pearl)},
+  howpublished = {arXiv:1703.00055},
+  url = {https://arxiv.org/abs/1703.00055},
+  year = {2017},
+  month = feb,
+  chcontrib = {misc},
+}
+
+@misc{lowstar,
+  author = {Karthikeyan Bhargavan and
+            Antoine Delignat-Lavaud and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Jonathan Protzenko and
+            Tahina Ramananandro and
+            Aseem Rastogi and
+            Nikhil Swamy and
+            Peng Wang and
+            Santiago Zanella-B\'eguelin and
+            Jean-Karim Zinzindohou\'e},
+  title = {Verified Low-Level Programming Embedded in {F*}},
+  howpublished = {arXiv:1703.00053},
+  url = {http://arxiv.org/abs/1703.00053},
+  year = {2017},
+  month = feb,
+  chcontrib = {minor},
+}
+
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -14,21 +52,6 @@
   year = {2015},
   month = oct,
   chcontrib = {secondauthor},
-}
-
-% Rejected
-@misc{pump_ccs2014,
-  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
-          Udit Dhawan and
-          Nikos Vasilakis and
-          Silviu Chiricescu and
-          Jonathan M. Smith and
-          Benjamin C. Pierce and
-          Andr\'{e} DeHon},
-  title = {Programming the {PUMP}: Hardware-Assisted Micro-Policies for Security},
-  howpublished = {Submitted},
-  year = {2014},
-  month = may,
 }
 
 %% Journal Papers
@@ -53,6 +76,7 @@
   pages = {689--734},
   year = {2016},
   month = dec,
+  doi = {10.3233/JCS-15784},
   ee = {http://content.iospress.com/articles/journal-of-computer-security/jcs15784},
   url = {http://arxiv.org/abs/1509.06503},
   chcontrib = {equalall},
@@ -75,7 +99,7 @@
   month = apr,
   issn = {1469-7653},
   pages = {e4 (62 pages)},
-  doi = {http://dx.doi.org/10.1017/S0956796816000058},
+  doi = {10.1017/S0956796816000058},
   ee = {http://journals.cambridge.org/article_S0956796816000058},
   url = {http://arxiv.org/abs/1409.0393},
   chcontrib = {equalthree}
@@ -172,6 +196,8 @@
   shortbooktitle = {POPL},
   year = {2017},
   month = jan,
+  ee = {https://dl.acm.org/citation.cfm?id=3009878},
+  doi = {10.1145/3009837.3009878},
   url = {https://www.fstar-lang.org/papers/dm4free/},
   pages = {515-529},
   publisher = {ACM},
@@ -193,6 +219,8 @@
   year = {2017},
   month = jan,
   url = {https://arxiv.org/abs/1607.05443},
+  ee = {https://dl.acm.org/citation.cfm?id=3009868},
+  doi = {10.1145/3009837.3009868},
   pages = {114-129},
   publisher = {ACM},
   acceptance = {64/279=0.23},
@@ -242,6 +270,7 @@
   isbn = {978-1-4503-3549-2},
   month = jan,
   year = {2016},
+  doi = {10.1145/2837614.2837655},
   ee = {http://dx.doi.org/10.1145/2837614.2837655},
   url = {https://www.fstar-lang.org/papers/mumon/},
   acceptance = {59/253=0.23},
@@ -259,6 +288,7 @@
   shortbooktitle = {ITP},
   pages     = {325--343},
   year      = {2015},
+  doi       = {10.1007/978-3-319-22102-1_22},
   ee        = {http://dx.doi.org/10.1007/978-3-319-22102-1_22},
   biburl    = {http://dblp.uni-trier.de/rec/bib/conf/itp/Paraskevopoulou15},
   url       = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/foundational-pbt.pdf},
@@ -772,4 +802,19 @@ Advisor: Jan Schwinghammer, Programming  Systems  Lab,
   acceptance = {40/133=0.30},
   note = {\href{http://arxiv.org/abs/1409.0393}{Extended version}
            accepted in special issue of JFP, February 2016.},
+}
+
+% Rejected
+@misc{pump_ccs2014,
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
+          Udit Dhawan and
+          Nikos Vasilakis and
+          Silviu Chiricescu and
+          Jonathan M. Smith and
+          Benjamin C. Pierce and
+          Andr\'{e} DeHon},
+  title = {Programming the {PUMP}: Hardware-Assisted Micro-Policies for Security},
+  howpublished = {Submitted},
+  year = {2014},
+  month = may,
 }
