--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -181,6 +181,37 @@
 
 %% Conference Papers
 
+@inproceedings{everest,
+  author = {Karthikeyan Bhargavan and
+        Barry Bond and
+        Antoine Delignat-Lavaud and
+        C\'edric Fournet and
+        Chris Hawblitzel and
+        C\u{a}t\u{a}lin Hri\c{t}cu and
+        Samin Ishtiaq and
+        Markulf Kohlweiss and
+        Rustan Leino and
+        Jay Lorch and
+        Kenji Maillard and
+        Jianyang Pang and
+        Bryan Parno and
+        Jonathan Protzenko and
+        Tahina Ramananandro and
+        Ashay Rane and
+        Aseem Rastogi and
+        Nikhil Swamy and
+        Laure Thompson and
+        Perry Wang and
+        Santiago Zanella-B\'eguelin and
+        Jean-Karim Zinzindohou\'e},
+  title = {Everest: Towards a Verified, Drop-in Replacement of {HTTPS}},
+  booktitle = {2nd Summit on Advances in Programming Languages (SNAPL)},
+  shortbooktitle = {SNAPL},
+  month = may,
+  year = 2017,
+  chcontrib = {minor},
+}
+
 @inproceedings{dm4free,
   author = {Danel Ahman and
             C\u{a}t\u{a}lin Hri\c{t}cu and
