--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -18,26 +18,6 @@
   chcontrib = {misc},
 }
 
-@misc{lowstar,
-  author = {Karthikeyan Bhargavan and
-            Antoine Delignat-Lavaud and
-            C\'edric Fournet and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Jonathan Protzenko and
-            Tahina Ramananandro and
-            Aseem Rastogi and
-            Nikhil Swamy and
-            Peng Wang and
-            Santiago Zanella-B\'eguelin and
-            Jean-Karim Zinzindohou\'e},
-  title = {Verified Low-Level Programming Embedded in {F*}},
-  howpublished = {arXiv:1703.00053},
-  url = {http://arxiv.org/abs/1703.00053},
-  year = {2017},
-  month = feb,
-  chcontrib = {minor},
-}
-
 @misc{yannis-report,
   author = {Yannis Juglaret and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -181,6 +161,29 @@
 
 %% Conference Papers
 
+@inproceedings{lowstar,
+  author = {Karthikeyan Bhargavan and
+            Antoine Delignat-Lavaud and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Jonathan Protzenko and
+            Tahina Ramananandro and
+            Aseem Rastogi and
+            Nikhil Swamy and
+            Peng Wang and
+            Santiago Zanella-B\'eguelin and
+            Jean-Karim Zinzindohou\'e},
+  title = {Verified Low-Level Programming Embedded in {F*}},
+  booktitle = {22nd ACM SIGPLAN International Conference on Functional Programming},
+  shortbooktitle = {ICFP},
+  url = {http://arxiv.org/abs/1703.00053},
+  year = {2017},
+  month = feb,
+  note = {To appear},
+  acceptance = {44/126=34.9},
+  chcontrib = {minor},
+}
+
 @inproceedings{everest,
   author = {Karthikeyan Bhargavan and
         Barry Bond and
@@ -210,6 +213,7 @@
   month = may,
   year = 2017,
   chcontrib = {minor},
+  url = {http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf},
 }
 
 @inproceedings{dm4free,
