--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -174,7 +174,7 @@
             Santiago Zanella-B\'eguelin and
             Jean-Karim Zinzindohou\'e},
   title = {Verified Low-Level Programming Embedded in {F*}},
-  booktitle = {22nd ACM SIGPLAN International Conference on Functional Programming},
+  booktitle = {22nd ACM SIGPLAN International Conference on Functional Programming (ICFP)},
   shortbooktitle = {ICFP},
   url = {http://arxiv.org/abs/1703.00053},
   year = {2017},
