--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,17 @@
 %% Drafts
 
+@misc{memory-safety,
+  author = {Arthur {Azevedo de Amorim} and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Benjamin C. Pierce},
+  title = {The Meaning of Memory Safety},
+  howpublished = {arXiv:},
+  url = {},
+  year = {2017},
+  month = may,
+  chcontrib = {minor},
+}
+
 @misc{relational,
   author = {Niklas Grimm and
             Kenji Maillard and
