--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -5,8 +5,8 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Benjamin C. Pierce},
   title = {The Meaning of Memory Safety},
-  howpublished = {arXiv:},
-  url = {},
+  howpublished = {arXiv:1705.07354},
+  url = {https://arxiv.org/abs/1705.07354},
   year = {2017},
   month = may,
   chcontrib = {minor},
