--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -174,23 +174,23 @@
 %% Conference Papers
 
 @inproceedings{lowstar,
-  author = {Karthikeyan Bhargavan and
-            Antoine Delignat-Lavaud and
-            C\'edric Fournet and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Jonathan Protzenko and
-            Tahina Ramananandro and
+  author = {Jonathan Protzenko and
+            Jean-Karim Zinzindohou\'e and
             Aseem Rastogi and
-            Nikhil Swamy and
+            Tahina Ramananandro and
             Peng Wang and
-            Santiago Zanella-B\'eguelin and
-            Jean-Karim Zinzindohou\'e},
+            Santiago {Zanella-B\'eguelin} and
+            Antoine Delignat-Lavaud and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Karthikeyan Bhargavan and
+            C\'edric Fournet and
+            Nikhil Swamy},
   title = {Verified Low-Level Programming Embedded in {F*}},
   booktitle = {22nd ACM SIGPLAN International Conference on Functional Programming (ICFP)},
   shortbooktitle = {ICFP},
   url = {http://arxiv.org/abs/1703.00053},
   year = {2017},
-  month = sep,
+  month = sept,
   note = {To appear},
   acceptance = {44/126=34.9},
   chcontrib = {minor},
