--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,20 @@
 %% Drafts
 
+@misc{preorders,
+  author = {Danel Ahman and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Kenji Maillard and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Recalling a Witness: Foundations and Applications of Monotonic State},
+  howpublished = {arXiv:1707.02466},
+  url = {https://arxiv.org/abs/1707.02466},
+  year = {2017},
+  month = jul,
+  chcontrib = {misc},
+}
+
 @misc{memory-safety,
   author = {Arthur {Azevedo de Amorim} and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -19,14 +34,16 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Matteo Maffei and
             Jonathan Protzenko and
+            Tahina Ramananandro and
             Aseem Rastogi and
             Nikhil Swamy and
-            Santiago Zanella-B\'eguelin},
-  title = {A Monadic Framework for Relational Verification (Functional Pearl)},
+            Santiago {Zanella-B\'eguelin}},
+  title = {A Monadic Framework for Relational Verification: Applied to
+           Information Security, Program Equivalence, and Optimizations},
   howpublished = {arXiv:1703.00055},
   url = {https://arxiv.org/abs/1703.00055},
   year = {2017},
-  month = feb,
+  month = jul,
   chcontrib = {misc},
 }
 
