--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -8,7 +8,7 @@
             Aseem Rastogi and
             Nikhil Swamy},
   title = {Recalling a Witness: Foundations and Applications of Monotonic State},
-  howpublished = {arXiv:1707.02466},
+  howpublished = {To appear at POPL'18},
   url = {https://arxiv.org/abs/1707.02466},
   year = {2017},
   month = jul,
@@ -43,7 +43,7 @@
   howpublished = {arXiv:1703.00055},
   url = {https://arxiv.org/abs/1703.00055},
   year = {2017},
-  month = jul,
+  month = oct,
   chcontrib = {misc},
 }
 
