--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,20 +1,5 @@
 %% Drafts
 
-@misc{preorders,
-  author = {Danel Ahman and
-            C\'edric Fournet and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Kenji Maillard and
-            Aseem Rastogi and
-            Nikhil Swamy},
-  title = {Recalling a Witness: Foundations and Applications of Monotonic State},
-  howpublished = {To appear at POPL'18},
-  url = {https://arxiv.org/abs/1707.02466},
-  year = {2017},
-  month = jul,
-  chcontrib = {misc},
-}
-
 @misc{memory-safety,
   author = {Arthur {Azevedo de Amorim} and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -189,6 +174,22 @@
 }
 
 %% Conference Papers
+
+@misc{preorders,
+  author = {Danel Ahman and
+            C\'edric Fournet and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Kenji Maillard and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Recalling a Witness: Foundations and Applications of Monotonic State},
+  howpublished = {To appear at POPL'18},
+  url = {https://arxiv.org/abs/1707.02466},
+  year = {2017},
+  month = jul,
+  chcontrib = {misc},
+  acceptance = {66/271=24.4},
+}
 
 @inproceedings{lowstar,
   author = {Jonathan Protzenko and
