--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -191,7 +191,7 @@
   acceptance = {66/271=24.4},
 }
 
-@inproceedings{lowstar,
+@article{lowstar,
   author = {Jonathan Protzenko and
             Jean-Karim Zinzindohou\'e and
             Aseem Rastogi and
@@ -204,12 +204,14 @@
             C\'edric Fournet and
             Nikhil Swamy},
   title = {Verified Low-Level Programming Embedded in {F*}},
-  booktitle = {22nd ACM SIGPLAN International Conference on Functional Programming (ICFP)},
-  shortbooktitle = {ICFP},
+  journal   = {{PACMPL}},
+  volume    = {1},
+  number    = {{ICFP}},
+  pages     = {17:1--17:29},
+  year      = {2017},
+  ee        = {http://doi.acm.org/10.1145/3110261},
+  doi       = {10.1145/3110261},
   url = {http://arxiv.org/abs/1703.00053},
-  year = {2017},
-  month = sept,
-  note = {To appear},
   acceptance = {44/126=34.9},
   chcontrib = {minor},
 }
