--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,36 @@
 %% Drafts
 
+@misc{GargHPSS17,
+  author = {Deepak Garg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Patrignani and
+            Marco Stronati and
+            David Swasey},
+  title = {Robust Hyperproperty Preservation for Secure Compilation
+           (Extended Abstract)},
+  howpublished = {arXiv:1710.07309},
+  url = {https://arxiv.org/abs/1710.07309},
+  year = {2017},
+  chcontrib = {equaltwo},
+}
+
+@misc{FachiniHSELAPT17,
+  author = {Guglielmo Fachini and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Stronati and
+            Ana Nora Evans and
+            Th\'eo Laurent and
+            Arthur Azevedo de Amorim and
+            Benjamin C. Pierce and
+            Andrew Tolmach and},
+  title = {Formally Secure Compilation of Unsafe Low-Level Components
+           (Extended Abstract)},
+  howpublished = {arXiv:1710.07308},
+  url = {https://arxiv.org/abs/1710.07308},
+  year = {2017},
+  chcontrib = {equalthree},
+}
+
 @misc{memory-safety,
   author = {Arthur {Azevedo de Amorim} and
             C\u{a}t\u{a}lin Hri\c{t}cu and
@@ -58,7 +89,7 @@
             Aseem Rastogi and
             Nikhil Swamy},
   title = {Recalling a Witness: Foundations and Applications of Monotonic State},
-  howpublished = {To appear at POPL'18},
+  howpublished = {Conditionally Accepted at POPL'18},
   url = {https://arxiv.org/abs/1707.02466},
   year = {2017},
   month = jul,
@@ -612,9 +643,9 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Brent Yorgey},
   title = {Software Foundations},
   month = may,
-  year = {2016},
-  publisher = {Electronic textbook, Version 4.0},
-  url = {https://www.cis.upenn.edu/~bcpierce/sf/sf-4.0/index.html},
+  year = {2017},
+  publisher = {Electronic textbook},
+  url = {https://www.cis.upenn.edu/~bcpierce/sf},
   key = {Books},
   chcontrib = {minor},
 }
