--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -74,8 +74,8 @@
             Santiago {Zanella-B\'eguelin}},
   title = {A Monadic Framework for Relational Verification: Applied to
            Information Security, Program Equivalence, and Optimizations},
-  booktitle = {The 7th ACM SIGPLAN International Conference on
-               Certified Programs and Proofs},
+  booktitle = {7th ACM SIGPLAN International Conference on
+               Certified Programs and Proofs (CPP)},
   shortbooktitle = {CPP},
   url = {https://arxiv.org/abs/1703.00055},
   year = {2018},
