--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -80,6 +80,15 @@
   url = {https://arxiv.org/abs/1703.00055},
   year = {2018},
   month = jan,
+  year = {2018},
+  isbn = {978-1-4503-5586-5},
+  location = {Los Angeles, CA, USA},
+  pages = {130--145},
+  numpages = {16},
+  ee = {http://doi.acm.org/10.1145/3167090},
+  doi = {10.1145/3167090},
+  acmid = {3167090},
+  publisher = {ACM},
   chcontrib = {misc},
 }
 
