--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,46 +1,23 @@
 %% Drafts
 
-@misc{GargHPSS17,
-  author = {Deepak Garg and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Marco Patrignani and
-            Marco Stronati and
-            David Swasey},
-  title = {Robust Hyperproperty Preservation for Secure Compilation
-           (Extended Abstract)},
-  howpublished = {arXiv:1710.07309},
-  url = {https://arxiv.org/abs/1710.07309},
-  year = {2017},
-  chcontrib = {equaltwo},
-}
-
-@misc{FachiniHSELAPT17,
+@misc{FachiniHSAEABLPT18,
   author = {Guglielmo Fachini and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Marco Stronati and
+            Arthur {Azevedo de Amorim} and
             Ana Nora Evans and
+            Carmine Abate and
+            Roberto Blanco and
             Th\'eo Laurent and
-            Arthur Azevedo de Amorim and
             Benjamin C. Pierce and
             Andrew Tolmach},
-  title = {Formally Secure Compilation of Unsafe Low-Level Components
-           (Extended Abstract)},
-  howpublished = {arXiv:1710.07308},
-  url = {https://arxiv.org/abs/1710.07308},
-  year = {2017},
+  title = {When Good Components Go Bad:
+           Formally Secure Compilation Despite Dynamic Compromise},
+  howpublished = {arXiv:1802.00588},
+  url = {https://arxiv.org/abs/1802.00588},
+  year = {2018},
+  month = feb,
   chcontrib = {equalthree},
-}
-
-@misc{memory-safety,
-  author = {Arthur {Azevedo de Amorim} and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Benjamin C. Pierce},
-  title = {The Meaning of Memory Safety},
-  howpublished = {arXiv:1705.07354},
-  url = {https://arxiv.org/abs/1705.07354},
-  year = {2017},
-  month = may,
-  chcontrib = {minor},
 }
 
 @misc{yannis-report,
@@ -61,6 +38,19 @@
 
 %% Conference Papers
 
+@misc{memory-safety,
+  author = {Arthur {Azevedo de Amorim} and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Benjamin C. Pierce},
+  title = {The Meaning of Memory Safety},
+  howpublished = {Accepted in
+    7th International Conference on Principles of Security and Trust (POST)},
+  url = {https://arxiv.org/abs/1705.07354},
+  year = {2018},
+  month = apr,
+  chcontrib = {minor},
+}
+
 @inproceedings{relational,
   author = {Niklas Grimm and
             Kenji Maillard and
@@ -78,7 +68,6 @@
                Certified Programs and Proofs (CPP)},
   shortbooktitle = {CPP},
   url = {https://arxiv.org/abs/1703.00055},
-  year = {2018},
   month = jan,
   year = {2018},
   isbn = {978-1-4503-5586-5},
@@ -89,7 +78,8 @@
   doi = {10.1145/3167090},
   acmid = {3167090},
   publisher = {ACM},
-  chcontrib = {misc},
+  acceptance = {22/51=0.43},
+  chcontrib = {equalall},
 }
 
 @article{preorders,
@@ -106,8 +96,8 @@
   year      = {2018},
   month = jan,
   url = {https://arxiv.org/abs/1707.02466},
-  chcontrib = {misc},
-  acceptance = {66/271=24.4},
+  chcontrib = {average},
+  acceptance = {66/271=0.24},
 }
 
 @article{lowstar,
@@ -164,6 +154,7 @@
   shortbooktitle = {SNAPL},
   month = may,
   year = 2017,
+  acceptance = {18/28=0.64},
   chcontrib = {minor},
   url = {http://drops.dagstuhl.de/opus/volltexte/2017/7119/pdf/LIPIcs-SNAPL-2017-1.pdf},
 }
@@ -665,6 +656,39 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 }
 
 %% Workshop Papers
+
+@misc{FachiniHSELAPT17,
+  author = {Guglielmo Fachini and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Stronati and
+            Ana Nora Evans and
+            Th\'eo Laurent and
+            Arthur {Azevedo de Amorim} and
+            Benjamin C. Pierce and
+            Andrew Tolmach},
+  title = {Formally Secure Compilation of Unsafe Low-Level Components
+           (Extended Abstract)},
+  howpublished = {arXiv:1710.07308},
+  url = {https://arxiv.org/abs/1710.07308},
+  year = {2017},
+  month = oct,
+  chcontrib = {equalthree},
+}
+
+@misc{GargHPSS17,
+  author = {Deepak Garg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Patrignani and
+            Marco Stronati and
+            David Swasey},
+  title = {Robust Hyperproperty Preservation for Secure Compilation
+           (Extended Abstract)},
+  howpublished = {arXiv:1710.07309},
+  url = {https://arxiv.org/abs/1710.07309},
+  year = {2017},
+  month = oct,
+  chcontrib = {equaltwo},
+}
 
 @misc{AguirreHKS16,
   title = {From {F*} to {SMT} (Extended Abstract)},
