--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -43,7 +43,7 @@
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Benjamin C. Pierce},
   title = {The Meaning of Memory Safety},
-  howpublished = {Accepted in
+  howpublished = {Accepted at
     7th International Conference on Principles of Security and Trust (POST)},
   url = {https://arxiv.org/abs/1705.07354},
   year = {2018},
@@ -93,6 +93,7 @@
   journal   = {{PACMPL}},
   volume    = {2},
   number    = {{POPL}},
+  pages     = {65:1--65:30},
   year      = {2018},
   month = jan,
   url = {https://arxiv.org/abs/1707.02466},
@@ -701,7 +702,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   month = jul,
   year = 2016,
   url = {http://prosecco.gforge.inria.fr/personal/hritcu/publications/fstar-to-smt-hatt2016.pdf},
-  chcontrib = {equalall},
+  chcontrib = {equaltwo},
 }
 
 @InProceedings{interlocks_ahns2012,
