--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,27 @@
 %% Drafts
 
+@misc{metafstar,
+  author = {Guido Mart\'inez and
+            Danel Ahman and
+            Victor Dumitrescu and
+            Nick Giannarakis and
+            Chris Hawblitzel and
+            Catalin Hritcu and
+            Monal Narasimhamurthy and
+            Zoe Paraskevopoulou and
+            Cl\'ement Pit-Claudel and
+            Jonathan Protzenko and
+            Tahina Ramananandro and
+            Aseem Rastogi and
+            Nikhil Swamy},
+  title = {Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier},
+  howpublished = {Submitted to arXiv},
+  url = {},
+  month = mar,
+  year = 2018,
+  chcontrib = {secondauthor},
+}
+
 @misc{FachiniHSAEABLPT18,
   author = {Guglielmo Fachini and
             C\u{a}t\u{a}lin Hri\c{t}cu and
