--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -15,7 +15,7 @@
             Aseem Rastogi and
             Nikhil Swamy},
   title = {Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier},
-  howpublished = {Submitted to arXiv},
+  howpublished = {arXiv},
   url = {},
   month = mar,
   year = 2018,
