--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -6,7 +6,7 @@
             Victor Dumitrescu and
             Nick Giannarakis and
             Chris Hawblitzel and
-            Catalin Hritcu and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
             Monal Narasimhamurthy and
             Zoe Paraskevopoulou and
             Cl\'ement Pit-Claudel and
