--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -14,7 +14,7 @@
             Tahina Ramananandro and
             Aseem Rastogi and
             Nikhil Swamy},
-  title = {Meta-F*: Metaprogramming and Tactics in an Effectful Program Verifier},
+  title = {{Meta-F*}: Metaprogramming and Tactics in an Effectful Program Verifier},
   howpublished = {arXiv},
   url = {},
   month = mar,
