--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -15,11 +15,11 @@
             Aseem Rastogi and
             Nikhil Swamy},
   title = {{Meta-F*}: Metaprogramming and Tactics in an Effectful Program Verifier},
-  howpublished = {arXiv},
-  url = {},
+  howpublished = {arXiv:1803.06547},
+  url = {https://arxiv.org/abs/1803.06547},
   month = mar,
   year = 2018,
-  chcontrib = {secondauthor},
+  chcontrib = {misc},
 }
 
 @misc{FachiniHSAEABLPT18,
