--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -23,22 +23,22 @@
 }
 
 @misc{FachiniHSAEABLPT18,
-  author = {Guglielmo Fachini and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Marco Stronati and
+  author = {Carmine Abate and
             Arthur {Azevedo de Amorim} and
-            Ana Nora Evans and
-            Carmine Abate and
             Roberto Blanco and
+            Ana Nora Evans and
+            Guglielmo Fachini and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
             Th\'eo Laurent and
             Benjamin C. Pierce and
+            Marco Stronati and
             Andrew Tolmach},
   title = {When Good Components Go Bad:
            Formally Secure Compilation Despite Dynamic Compromise},
   howpublished = {arXiv:1802.00588},
   url = {https://arxiv.org/abs/1802.00588},
   year = {2018},
-  month = feb,
+  month = may,
   chcontrib = {equalthree},
 }
 
@@ -70,6 +70,7 @@
   url = {https://arxiv.org/abs/1705.07354},
   year = {2018},
   month = apr,
+  acceptance = {14/45=0.31},
   chcontrib = {minor},
 }
 
