--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -22,7 +22,7 @@
   chcontrib = {misc},
 }
 
-@misc{FachiniHSAEABLPT18,
+@misc{AbateABEFHLPST18,
   author = {Carmine Abate and
             Arthur {Azevedo de Amorim} and
             Roberto Blanco and
