--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,20 @@
 %% Drafts
 
+@misc{AbateBGHPT18,
+  author = {Carmine Abate and
+            Roberto Blanco and
+            Deepak Garg and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Marco Patrignani and
+            J\'er\'emy Thibault},
+  title = {Exploring Robust Property Preservation for Secure Compilation},
+  howpublished = {arXiv:1807.04603},
+  url = {https://arxiv.org/abs/1807.04603},
+  month = jul,
+  year = 2018,
+  chcontrib = {equaltwo},
+}
+
 @misc{metafstar,
   author = {Guido Mart\'inez and
             Danel Ahman and
@@ -14,7 +29,7 @@
             Tahina Ramananandro and
             Aseem Rastogi and
             Nikhil Swamy},
-  title = {{Meta-F*}: Metaprogramming and Tactics in an Effectful Program Verifier},
+  title = {{Meta-F*}:  Proof Automation with {SMT}, Tactics, and Metaprograms},
   howpublished = {arXiv:1803.06547},
   url = {https://arxiv.org/abs/1803.06547},
   month = mar,
@@ -60,13 +75,15 @@
 
 %% Conference Papers
 
-@misc{memory-safety,
+@inproceedings{memory-safety,
   author = {Arthur {Azevedo de Amorim} and
             C\u{a}t\u{a}lin Hri\c{t}cu and
             Benjamin C. Pierce},
   title = {The Meaning of Memory Safety},
-  howpublished = {Accepted at
-    7th International Conference on Principles of Security and Trust (POST)},
+  booktitle = {7th International Conference on
+               Principles of Security and Trust ({POST})},
+  pages     = {79--105},
+  doi       = {10.1007/978-3-319-89722-6\_4},
   url = {https://arxiv.org/abs/1705.07354},
   year = {2018},
   month = apr,
